# PathWrap

./: .gitignore  Cargo.toml  Justfile  LICENSE  PLAN.md  README.md  app_log.txt  build.rs  e.txt  se.txt  test_find.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e.yml
src/: app.rs  logging.rs  main.rs
src/core/: controller.rs  mod.rs  types.rs
src/os/: dialog.rs  explorer.rs  input_hook.rs  mod.rs  monitor.rs  window_ext.rs
src/ui/: mod.rs  theme.rs  window.rs  window_tests.rs
src/utils/: error.rs  logging.rs  mod.rs  string.rs
tests/: e2e.rs
